--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
+   overflow: scroll;
    /*background-position: center;*/
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
